some adjustments in swagger
