# internal/api/dto/tokenResponse_dto.go
@@ -1,9 +1,8 @@
 package dto
 
-type TokenResponse struct {
+type TokenResponse_dto struct {
     AccessToken string `json:"access_token"`
     ExpiresIn   int    `json:"expires_in"`
     RefreshToken string `json:"refresh_token"`
     TokenType    string `json:"token_type"`
-    Scope        string 
 }
